This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.9.1.3
  BugFix: Location Pane flickers when resizing (#1740106)

WinMerge 2.9.1.2 - 2008-05-23 (r5362)
  Optimize location pane (r5341, r5342, r5346, r5351, r5355, r5356)
  BugFix: Version Control filter did not match all VSS files (#1881186)
  BugFix: Fix showing differences in the end of the line (#1883409, #1962816)
  BugFix: Fix command line paths in quotes ending with "\" (#1963523)
  New translation: Greek (#1968429)
  Translation updates:
  - Bulgarian (#1957434)
  - Croatian (#1958283)
  - Swedish (#1950188, #1970074)

WinMerge 2.9.1.1 - 2008-04-23 (r5324)
  Release Notes update (#1933950)
  Installer: Use correct way to create start menu web link (#1913919)
  Installer: Simplify DeletePreviousStartMenu() function (#1913949)
  Installer: Updated the side art of the installer application (#1915012)
  Update URLs and switch to 2.8 manual (#1919965)
  New splash screen (#1914869)
  Tab icons at Filter dialog (#1926531)
  Add VS2003/VS2005 project files (#1926346)
  Create separate document for compiling WinMerge (#1927502)
  Update InnoSetup translations (#1931492)
  Make 'Yes' the default button in copy confirmation dialog (#1943647)
  Allow drag & drop of paths to Open dialog (#1945254)
  Enlarge 'Discard All' button in Save confirmation dialog (#1947216)
  BugFix: Installer could create a registry access error (#1909967)
  BugFix: The filter text box in Open-dialog sometimes displayed some garbage
    data (#1915424)
  BugFix: Print area was not clipped correctly. (#1915536)
  BugFix: Undo after pane swapping (#1915536, #1923625)
  BugFix: Quick compare for same folder didn't show differences (#1918599)
  BugFix: Installer didn't have ChangeLog.txt included (r5255)
  BugFix: Shortcuts given in command line were not expanded (#1942217)
  New translation: Romanian (#1939729)