@@ -3,6 +3,7 @@ Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
 to Subversion revision numbers (rXXXXX).
 
 WinMerge 2.9.1.3
+  Add VB.net keywords to Basic highlighter (#1970912)
   BugFix: Location Pane flickers when resizing (#1740106)
 
 WinMerge 2.9.1.2 - 2008-05-23 (r5362)
